// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Breakdown when data is loaded returns the transaction breakdown for a service 1`] = `
Object {
  "timeseries": Array [
    Object {
      "color": "#54b399",
      "data": Array [
        Object {
          "x": 1599717600000,
          "y": 0.058823529411764705,
        },
        Object {
          "x": 1599717630000,
          "y": 0.037037037037037035,
        },
        Object {
          "x": 1599717660000,
          "y": null,
        },
        Object {
          "x": 1599717690000,
          "y": 0.07142857142857142,
        },
        Object {
          "x": 1599717720000,
          "y": null,
        },
        Object {
          "x": 1599717750000,
          "y": 0.023787740164684355,
        },
        Object {
          "x": 1599717780000,
          "y": 0.19444444444444445,
        },
        Object {
          "x": 1599717810000,
          "y": 0.1346153846153846,
        },
        Object {
          "x": 1599717840000,
          "y": null,
        },
        Object {
          "x": 1599717870000,
          "y": 0.6666666666666666,
        },
        Object {
          "x": 1599717900000,
          "y": 0.04411764705882353,
        },
        Object {
          "x": 1599717930000,
          "y": 0.30985915492957744,
        },
        Object {
          "x": 1599717960000,
          "y": null,
        },
        Object {
          "x": 1599717990000,
          "y": 0.1183206106870229,
        },
        Object {
          "x": 1599718020000,
          "y": 1,
        },
        Object {
          "x": 1599718050000,
          "y": 0.03389830508474576,
        },
        Object {
          "x": 1599718080000,
          "y": null,
        },
        Object {
          "x": 1599718110000,
          "y": 0.1657754010695187,
        },
        Object {
          "x": 1599718140000,
          "y": null,
        },
        Object {
          "x": 1599718170000,
          "y": 0.0273972602739726,
        },
        Object {
          "x": 1599718200000,
          "y": 0.7272727272727273,
        },
        Object {
          "x": 1599718230000,
          "y": 0.0954356846473029,
        },
        Object {
          "x": 1599718260000,
          "y": null,
        },
        Object {
          "x": 1599718290000,
          "y": null,
        },
        Object {
          "x": 1599718320000,
          "y": null,
        },
        Object {
          "x": 1599718350000,
          "y": 0.1111111111111111,
        },
        Object {
          "x": 1599718380000,
          "y": 0.05555555555555555,
        },
        Object {
          "x": 1599718410000,
          "y": 0.48484848484848486,
        },
        Object {
          "x": 1599718440000,
          "y": null,
        },
        Object {
          "x": 1599718470000,
          "y": 0.4642857142857143,
        },
        Object {
          "x": 1599718500000,
          "y": 0.045454545454545456,
        },
        Object {
          "x": 1599718530000,
          "y": 1,
        },
        Object {
          "x": 1599718560000,
          "y": null,
        },
        Object {
          "x": 1599718590000,
          "y": 0.3469387755102041,
        },
        Object {
          "x": 1599718620000,
          "y": null,
        },
        Object {
          "x": 1599718650000,
          "y": 0.045454545454545456,
        },
        Object {
          "x": 1599718680000,
          "y": null,
        },
        Object {
          "x": 1599718710000,
          "y": 0.02967032967032967,
        },
        Object {
          "x": 1599718740000,
          "y": 0.7910447761194029,
        },
        Object {
          "x": 1599718770000,
          "y": 0.020833333333333332,
        },
        Object {
          "x": 1599718800000,
          "y": 0.3448275862068966,
        },
        Object {
          "x": 1599718830000,
          "y": null,
        },
        Object {
          "x": 1599718860000,
          "y": 0.4107142857142857,
        },
        Object {
          "x": 1599718890000,
          "y": 0.21428571428571427,
        },
        Object {
          "x": 1599718920000,
          "y": null,
        },
        Object {
          "x": 1599718950000,
          "y": 0.3235294117647059,
        },
        Object {
          "x": 1599718980000,
          "y": null,
        },
        Object {
          "x": 1599719010000,
          "y": null,
        },
        Object {
          "x": 1599719040000,
          "y": 0.4642857142857143,
        },
        Object {
          "x": 1599719070000,
          "y": 0.20192307692307693,
        },
        Object {
          "x": 1599719100000,
          "y": 0.4,
        },
        Object {
          "x": 1599719130000,
          "y": 0.28205128205128205,
        },
        Object {
          "x": 1599719160000,
          "y": null,
        },
        Object {
          "x": 1599719190000,
          "y": 0.020223152022315203,
        },
        Object {
          "x": 1599719220000,
          "y": 0.05263157894736842,
        },
        Object {
          "x": 1599719250000,
          "y": 0.19480519480519481,
        },
        Object {
          "x": 1599719280000,
          "y": null,
        },
        Object {
          "x": 1599719310000,
          "y": 0.136986301369863,
        },
        Object {
          "x": 1599719340000,
          "y": 0.3870967741935484,
        },
        Object {
          "x": 1599719370000,
          "y": null,
        },
        Object {
          "x": 1599719400000,
          "y": null,
        },
        Object {
          "x": 1599719430000,
          "y": 0.11141304347826086,
        },
        Object {
          "x": 1599719460000,
          "y": 0.5769230769230769,
        },
        Object {
          "x": 1599719490000,
          "y": null,
        },
        Object {
          "x": 1599719520000,
          "y": 0.041666666666666664,
        },
        Object {
          "x": 1599719550000,
          "y": 0.02857142857142857,
        },
        Object {
          "x": 1599719580000,
          "y": null,
        },
        Object {
          "x": 1599719610000,
          "y": 0.35714285714285715,
        },
        Object {
          "x": 1599719640000,
          "y": null,
        },
        Object {
          "x": 1599719670000,
          "y": 0.2903225806451613,
        },
        Object {
          "x": 1599719700000,
          "y": null,
        },
        Object {
          "x": 1599719730000,
          "y": null,
        },
        Object {
          "x": 1599719760000,
          "y": 0.6222222222222222,
        },
        Object {
          "x": 1599719790000,
          "y": 0.17857142857142858,
        },
        Object {
          "x": 1599719820000,
          "y": null,
        },
        Object {
          "x": 1599719850000,
          "y": 0.4807692307692308,
        },
        Object {
          "x": 1599719880000,
          "y": null,
        },
        Object {
          "x": 1599719910000,
          "y": 0.5348837209302325,
        },
        Object {
          "x": 1599719940000,
          "y": null,
        },
        Object {
          "x": 1599719970000,
          "y": null,
        },
        Object {
          "x": 1599720000000,
          "y": 0.24444444444444444,
        },
        Object {
          "x": 1599720030000,
          "y": 0.4,
        },
        Object {
          "x": 1599720060000,
          "y": null,
        },
        Object {
          "x": 1599720090000,
          "y": 1,
        },
        Object {
          "x": 1599720120000,
          "y": null,
        },
        Object {
          "x": 1599720150000,
          "y": null,
        },
        Object {
          "x": 1599720180000,
          "y": null,
        },
        Object {
          "x": 1599720210000,
          "y": 0.3793103448275862,
        },
        Object {
          "x": 1599720240000,
          "y": null,
        },
        Object {
          "x": 1599720270000,
          "y": 0.20202020202020202,
        },
        Object {
          "x": 1599720300000,
          "y": null,
        },
        Object {
          "x": 1599720330000,
          "y": 0.023121387283236993,
        },
        Object {
          "x": 1599720360000,
          "y": null,
        },
        Object {
          "x": 1599720390000,
          "y": 1,
        },
        Object {
          "x": 1599720420000,
          "y": 0.3076923076923077,
        },
        Object {
          "x": 1599720450000,
          "y": 0.24675324675324675,
        },
        Object {
          "x": 1599720480000,
          "y": null,
        },
        Object {
          "x": 1599720510000,
          "y": 0.875,
        },
        Object {
          "x": 1599720540000,
          "y": 0.47368421052631576,
        },
        Object {
          "x": 1599720570000,
          "y": null,
        },
        Object {
          "x": 1599720600000,
          "y": null,
        },
        Object {
          "x": 1599720630000,
          "y": 0.22580645161290322,
        },
        Object {
          "x": 1599720660000,
          "y": 0.391304347826087,
        },
        Object {
          "x": 1599720690000,
          "y": 0.75,
        },
        Object {
          "x": 1599720720000,
          "y": null,
        },
        Object {
          "x": 1599720750000,
          "y": 0.7804878048780488,
        },
        Object {
          "x": 1599720780000,
          "y": 0.18518518518518517,
        },
        Object {
          "x": 1599720810000,
          "y": 0.24074074074074073,
        },
        Object {
          "x": 1599720840000,
          "y": null,
        },
        Object {
          "x": 1599720870000,
          "y": 1,
        },
        Object {
          "x": 1599720900000,
          "y": 0.1111111111111111,
        },
        Object {
          "x": 1599720930000,
          "y": 0.5161290322580645,
        },
        Object {
          "x": 1599720960000,
          "y": null,
        },
        Object {
          "x": 1599720990000,
          "y": 0.14285714285714285,
        },
        Object {
          "x": 1599721020000,
          "y": 1,
        },
        Object {
          "x": 1599721050000,
          "y": 0.7272727272727273,
        },
        Object {
          "x": 1599721080000,
          "y": null,
        },
        Object {
          "x": 1599721110000,
          "y": 0.059027777777777776,
        },
        Object {
          "x": 1599721140000,
          "y": 0.022727272727272728,
        },
        Object {
          "x": 1599721170000,
          "y": null,
        },
        Object {
          "x": 1599721200000,
          "y": null,
        },
      ],
      "hideLegend": false,
      "legendValue": "14%",
      "title": "app",
      "type": "areaStacked",
    },
    Object {
      "color": "#6092c0",
      "data": Array [
        Object {
          "x": 1599717600000,
          "y": 0.9411764705882353,
        },
        Object {
          "x": 1599717630000,
          "y": 0.9629629629629629,
        },
        Object {
          "x": 1599717660000,
          "y": null,
        },
        Object {
          "x": 1599717690000,
          "y": 0.9285714285714286,
        },
        Object {
          "x": 1599717720000,
          "y": null,
        },
        Object {
          "x": 1599717750000,
          "y": 0.9734675205855444,
        },
        Object {
          "x": 1599717780000,
          "y": 0.8055555555555556,
        },
        Object {
          "x": 1599717810000,
          "y": 0.8653846153846154,
        },
        Object {
          "x": 1599717840000,
          "y": null,
        },
        Object {
          "x": 1599717870000,
          "y": 0,
        },
        Object {
          "x": 1599717900000,
          "y": 0.9558823529411765,
        },
        Object {
          "x": 1599717930000,
          "y": 0.6901408450704225,
        },
        Object {
          "x": 1599717960000,
          "y": null,
        },
        Object {
          "x": 1599717990000,
          "y": 0.7404580152671756,
        },
        Object {
          "x": 1599718020000,
          "y": 0,
        },
        Object {
          "x": 1599718050000,
          "y": 0.9661016949152542,
        },
        Object {
          "x": 1599718080000,
          "y": null,
        },
        Object {
          "x": 1599718110000,
          "y": 0.6363636363636364,
        },
        Object {
          "x": 1599718140000,
          "y": null,
        },
        Object {
          "x": 1599718170000,
          "y": 0.9726027397260274,
        },
        Object {
          "x": 1599718200000,
          "y": 0,
        },
        Object {
          "x": 1599718230000,
          "y": 0.8921161825726142,
        },
        Object {
          "x": 1599718260000,
          "y": null,
        },
        Object {
          "x": 1599718290000,
          "y": null,
        },
        Object {
          "x": 1599718320000,
          "y": null,
        },
        Object {
          "x": 1599718350000,
          "y": 0.8888888888888888,
        },
        Object {
          "x": 1599718380000,
          "y": 0.9444444444444444,
        },
        Object {
          "x": 1599718410000,
          "y": 0,
        },
        Object {
          "x": 1599718440000,
          "y": null,
        },
        Object {
          "x": 1599718470000,
          "y": 0.38392857142857145,
        },
        Object {
          "x": 1599718500000,
          "y": 0.9545454545454546,
        },
        Object {
          "x": 1599718530000,
          "y": 0,
        },
        Object {
          "x": 1599718560000,
          "y": null,
        },
        Object {
          "x": 1599718590000,
          "y": 0.3877551020408163,
        },
        Object {
          "x": 1599718620000,
          "y": null,
        },
        Object {
          "x": 1599718650000,
          "y": 0.9545454545454546,
        },
        Object {
          "x": 1599718680000,
          "y": null,
        },
        Object {
          "x": 1599718710000,
          "y": 0.9560439560439561,
        },
        Object {
          "x": 1599718740000,
          "y": 0.208955223880597,
        },
        Object {
          "x": 1599718770000,
          "y": 0.9791666666666666,
        },
        Object {
          "x": 1599718800000,
          "y": 0,
        },
        Object {
          "x": 1599718830000,
          "y": null,
        },
        Object {
          "x": 1599718860000,
          "y": 0,
        },
        Object {
          "x": 1599718890000,
          "y": 0.5833333333333334,
        },
        Object {
          "x": 1599718920000,
          "y": null,
        },
        Object {
          "x": 1599718950000,
          "y": 0.5882352941176471,
        },
        Object {
          "x": 1599718980000,
          "y": null,
        },
        Object {
          "x": 1599719010000,
          "y": null,
        },
        Object {
          "x": 1599719040000,
          "y": 0.5357142857142857,
        },
        Object {
          "x": 1599719070000,
          "y": 0.5,
        },
        Object {
          "x": 1599719100000,
          "y": 0,
        },
        Object {
          "x": 1599719130000,
          "y": 0.6410256410256411,
        },
        Object {
          "x": 1599719160000,
          "y": null,
        },
        Object {
          "x": 1599719190000,
          "y": 0.9672245467224547,
        },
        Object {
          "x": 1599719220000,
          "y": 0.9473684210526315,
        },
        Object {
          "x": 1599719250000,
          "y": 0.7922077922077922,
        },
        Object {
          "x": 1599719280000,
          "y": null,
        },
        Object {
          "x": 1599719310000,
          "y": 0.8356164383561644,
        },
        Object {
          "x": 1599719340000,
          "y": 0.1935483870967742,
        },
        Object {
          "x": 1599719370000,
          "y": null,
        },
        Object {
          "x": 1599719400000,
          "y": null,
        },
        Object {
          "x": 1599719430000,
          "y": 0.8777173913043478,
        },
        Object {
          "x": 1599719460000,
          "y": 0.28205128205128205,
        },
        Object {
          "x": 1599719490000,
          "y": null,
        },
        Object {
          "x": 1599719520000,
          "y": 0.9583333333333334,
        },
        Object {
          "x": 1599719550000,
          "y": 0.9714285714285714,
        },
        Object {
          "x": 1599719580000,
          "y": null,
        },
        Object {
          "x": 1599719610000,
          "y": 0,
        },
        Object {
          "x": 1599719640000,
          "y": null,
        },
        Object {
          "x": 1599719670000,
          "y": 0.5725806451612904,
        },
        Object {
          "x": 1599719700000,
          "y": null,
        },
        Object {
          "x": 1599719730000,
          "y": null,
        },
        Object {
          "x": 1599719760000,
          "y": 0.37777777777777777,
        },
        Object {
          "x": 1599719790000,
          "y": 0.5,
        },
        Object {
          "x": 1599719820000,
          "y": null,
        },
        Object {
          "x": 1599719850000,
          "y": 0.5192307692307693,
        },
        Object {
          "x": 1599719880000,
          "y": null,
        },
        Object {
          "x": 1599719910000,
          "y": 0.46511627906976744,
        },
        Object {
          "x": 1599719940000,
          "y": null,
        },
        Object {
          "x": 1599719970000,
          "y": null,
        },
        Object {
          "x": 1599720000000,
          "y": 0.6666666666666666,
        },
        Object {
          "x": 1599720030000,
          "y": 0.45,
        },
        Object {
          "x": 1599720060000,
          "y": null,
        },
        Object {
          "x": 1599720090000,
          "y": 0,
        },
        Object {
          "x": 1599720120000,
          "y": null,
        },
        Object {
          "x": 1599720150000,
          "y": null,
        },
        Object {
          "x": 1599720180000,
          "y": null,
        },
        Object {
          "x": 1599720210000,
          "y": 0,
        },
        Object {
          "x": 1599720240000,
          "y": null,
        },
        Object {
          "x": 1599720270000,
          "y": 0.797979797979798,
        },
        Object {
          "x": 1599720300000,
          "y": null,
        },
        Object {
          "x": 1599720330000,
          "y": 0.976878612716763,
        },
        Object {
          "x": 1599720360000,
          "y": null,
        },
        Object {
          "x": 1599720390000,
          "y": 0,
        },
        Object {
          "x": 1599720420000,
          "y": 0.6410256410256411,
        },
        Object {
          "x": 1599720450000,
          "y": 0.5064935064935064,
        },
        Object {
          "x": 1599720480000,
          "y": null,
        },
        Object {
          "x": 1599720510000,
          "y": 0,
        },
        Object {
          "x": 1599720540000,
          "y": 0,
        },
        Object {
          "x": 1599720570000,
          "y": null,
        },
        Object {
          "x": 1599720600000,
          "y": null,
        },
        Object {
          "x": 1599720630000,
          "y": 0.7258064516129032,
        },
        Object {
          "x": 1599720660000,
          "y": 0,
        },
        Object {
          "x": 1599720690000,
          "y": 0,
        },
        Object {
          "x": 1599720720000,
          "y": null,
        },
        Object {
          "x": 1599720750000,
          "y": 0.21951219512195122,
        },
        Object {
          "x": 1599720780000,
          "y": 0.6111111111111112,
        },
        Object {
          "x": 1599720810000,
          "y": 0.6851851851851852,
        },
        Object {
          "x": 1599720840000,
          "y": null,
        },
        Object {
          "x": 1599720870000,
          "y": 0,
        },
        Object {
          "x": 1599720900000,
          "y": 0.7,
        },
        Object {
          "x": 1599720930000,
          "y": 0.41935483870967744,
        },
        Object {
          "x": 1599720960000,
          "y": null,
        },
        Object {
          "x": 1599720990000,
          "y": 0.7428571428571429,
        },
        Object {
          "x": 1599721020000,
          "y": 0,
        },
        Object {
          "x": 1599721050000,
          "y": 0,
        },
        Object {
          "x": 1599721080000,
          "y": null,
        },
        Object {
          "x": 1599721110000,
          "y": 0.8506944444444444,
        },
        Object {
          "x": 1599721140000,
          "y": 0.9772727272727273,
        },
        Object {
          "x": 1599721170000,
          "y": null,
        },
        Object {
          "x": 1599721200000,
          "y": null,
        },
      ],
      "hideLegend": false,
      "legendValue": "79%",
      "title": "http",
      "type": "areaStacked",
    },
    Object {
      "color": "#d36086",
      "data": Array [
        Object {
          "x": 1599717600000,
          "y": 0,
        },
        Object {
          "x": 1599717630000,
          "y": 0,
        },
        Object {
          "x": 1599717660000,
          "y": null,
        },
        Object {
          "x": 1599717690000,
          "y": 0,
        },
        Object {
          "x": 1599717720000,
          "y": null,
        },
        Object {
          "x": 1599717750000,
          "y": 0.0027447392497712718,
        },
        Object {
          "x": 1599717780000,
          "y": 0,
        },
        Object {
          "x": 1599717810000,
          "y": 0,
        },
        Object {
          "x": 1599717840000,
          "y": null,
        },
        Object {
          "x": 1599717870000,
          "y": 0.3333333333333333,
        },
        Object {
          "x": 1599717900000,
          "y": 0,
        },
        Object {
          "x": 1599717930000,
          "y": 0,
        },
        Object {
          "x": 1599717960000,
          "y": null,
        },
        Object {
          "x": 1599717990000,
          "y": 0.14122137404580154,
        },
        Object {
          "x": 1599718020000,
          "y": 0,
        },
        Object {
          "x": 1599718050000,
          "y": 0,
        },
        Object {
          "x": 1599718080000,
          "y": null,
        },
        Object {
          "x": 1599718110000,
          "y": 0.19786096256684493,
        },
        Object {
          "x": 1599718140000,
          "y": null,
        },
        Object {
          "x": 1599718170000,
          "y": 0,
        },
        Object {
          "x": 1599718200000,
          "y": 0.2727272727272727,
        },
        Object {
          "x": 1599718230000,
          "y": 0.012448132780082987,
        },
        Object {
          "x": 1599718260000,
          "y": null,
        },
        Object {
          "x": 1599718290000,
          "y": null,
        },
        Object {
          "x": 1599718320000,
          "y": null,
        },
        Object {
          "x": 1599718350000,
          "y": 0,
        },
        Object {
          "x": 1599718380000,
          "y": 0,
        },
        Object {
          "x": 1599718410000,
          "y": 0.5151515151515151,
        },
        Object {
          "x": 1599718440000,
          "y": null,
        },
        Object {
          "x": 1599718470000,
          "y": 0.15178571428571427,
        },
        Object {
          "x": 1599718500000,
          "y": 0,
        },
        Object {
          "x": 1599718530000,
          "y": 0,
        },
        Object {
          "x": 1599718560000,
          "y": null,
        },
        Object {
          "x": 1599718590000,
          "y": 0.2653061224489796,
        },
        Object {
          "x": 1599718620000,
          "y": null,
        },
        Object {
          "x": 1599718650000,
          "y": 0,
        },
        Object {
          "x": 1599718680000,
          "y": null,
        },
        Object {
          "x": 1599718710000,
          "y": 0.014285714285714285,
        },
        Object {
          "x": 1599718740000,
          "y": 0,
        },
        Object {
          "x": 1599718770000,
          "y": 0,
        },
        Object {
          "x": 1599718800000,
          "y": 0.6551724137931034,
        },
        Object {
          "x": 1599718830000,
          "y": null,
        },
        Object {
          "x": 1599718860000,
          "y": 0.5892857142857143,
        },
        Object {
          "x": 1599718890000,
          "y": 0.20238095238095238,
        },
        Object {
          "x": 1599718920000,
          "y": null,
        },
        Object {
          "x": 1599718950000,
          "y": 0.08823529411764706,
        },
        Object {
          "x": 1599718980000,
          "y": null,
        },
        Object {
          "x": 1599719010000,
          "y": null,
        },
        Object {
          "x": 1599719040000,
          "y": 0,
        },
        Object {
          "x": 1599719070000,
          "y": 0.2980769230769231,
        },
        Object {
          "x": 1599719100000,
          "y": 0.6,
        },
        Object {
          "x": 1599719130000,
          "y": 0.07692307692307693,
        },
        Object {
          "x": 1599719160000,
          "y": null,
        },
        Object {
          "x": 1599719190000,
          "y": 0.012552301255230125,
        },
        Object {
          "x": 1599719220000,
          "y": 0,
        },
        Object {
          "x": 1599719250000,
          "y": 0.012987012987012988,
        },
        Object {
          "x": 1599719280000,
          "y": null,
        },
        Object {
          "x": 1599719310000,
          "y": 0.0273972602739726,
        },
        Object {
          "x": 1599719340000,
          "y": 0.41935483870967744,
        },
        Object {
          "x": 1599719370000,
          "y": null,
        },
        Object {
          "x": 1599719400000,
          "y": null,
        },
        Object {
          "x": 1599719430000,
          "y": 0.010869565217391304,
        },
        Object {
          "x": 1599719460000,
          "y": 0.14102564102564102,
        },
        Object {
          "x": 1599719490000,
          "y": null,
        },
        Object {
          "x": 1599719520000,
          "y": 0,
        },
        Object {
          "x": 1599719550000,
          "y": 0,
        },
        Object {
          "x": 1599719580000,
          "y": null,
        },
        Object {
          "x": 1599719610000,
          "y": 0.6428571428571429,
        },
        Object {
          "x": 1599719640000,
          "y": null,
        },
        Object {
          "x": 1599719670000,
          "y": 0.13709677419354838,
        },
        Object {
          "x": 1599719700000,
          "y": null,
        },
        Object {
          "x": 1599719730000,
          "y": null,
        },
        Object {
          "x": 1599719760000,
          "y": 0,
        },
        Object {
          "x": 1599719790000,
          "y": 0.32142857142857145,
        },
        Object {
          "x": 1599719820000,
          "y": null,
        },
        Object {
          "x": 1599719850000,
          "y": 0,
        },
        Object {
          "x": 1599719880000,
          "y": null,
        },
        Object {
          "x": 1599719910000,
          "y": 0,
        },
        Object {
          "x": 1599719940000,
          "y": null,
        },
        Object {
          "x": 1599719970000,
          "y": null,
        },
        Object {
          "x": 1599720000000,
          "y": 0.08888888888888889,
        },
        Object {
          "x": 1599720030000,
          "y": 0.15,
        },
        Object {
          "x": 1599720060000,
          "y": null,
        },
        Object {
          "x": 1599720090000,
          "y": 0,
        },
        Object {
          "x": 1599720120000,
          "y": null,
        },
        Object {
          "x": 1599720150000,
          "y": null,
        },
        Object {
          "x": 1599720180000,
          "y": null,
        },
        Object {
          "x": 1599720210000,
          "y": 0.6206896551724138,
        },
        Object {
          "x": 1599720240000,
          "y": null,
        },
        Object {
          "x": 1599720270000,
          "y": 0,
        },
        Object {
          "x": 1599720300000,
          "y": null,
        },
        Object {
          "x": 1599720330000,
          "y": 0,
        },
        Object {
          "x": 1599720360000,
          "y": null,
        },
        Object {
          "x": 1599720390000,
          "y": 0,
        },
        Object {
          "x": 1599720420000,
          "y": 0.05128205128205128,
        },
        Object {
          "x": 1599720450000,
          "y": 0.24675324675324675,
        },
        Object {
          "x": 1599720480000,
          "y": null,
        },
        Object {
          "x": 1599720510000,
          "y": 0.125,
        },
        Object {
          "x": 1599720540000,
          "y": 0.5263157894736842,
        },
        Object {
          "x": 1599720570000,
          "y": null,
        },
        Object {
          "x": 1599720600000,
          "y": null,
        },
        Object {
          "x": 1599720630000,
          "y": 0.04838709677419355,
        },
        Object {
          "x": 1599720660000,
          "y": 0.6086956521739131,
        },
        Object {
          "x": 1599720690000,
          "y": 0.25,
        },
        Object {
          "x": 1599720720000,
          "y": null,
        },
        Object {
          "x": 1599720750000,
          "y": 0,
        },
        Object {
          "x": 1599720780000,
          "y": 0.2037037037037037,
        },
        Object {
          "x": 1599720810000,
          "y": 0.07407407407407407,
        },
        Object {
          "x": 1599720840000,
          "y": null,
        },
        Object {
          "x": 1599720870000,
          "y": 0,
        },
        Object {
          "x": 1599720900000,
          "y": 0.18888888888888888,
        },
        Object {
          "x": 1599720930000,
          "y": 0.06451612903225806,
        },
        Object {
          "x": 1599720960000,
          "y": null,
        },
        Object {
          "x": 1599720990000,
          "y": 0.11428571428571428,
        },
        Object {
          "x": 1599721020000,
          "y": 0,
        },
        Object {
          "x": 1599721050000,
          "y": 0.2727272727272727,
        },
        Object {
          "x": 1599721080000,
          "y": null,
        },
        Object {
          "x": 1599721110000,
          "y": 0.09027777777777778,
        },
        Object {
          "x": 1599721140000,
          "y": 0,
        },
        Object {
          "x": 1599721170000,
          "y": null,
        },
        Object {
          "x": 1599721200000,
          "y": null,
        },
      ],
      "hideLegend": false,
      "legendValue": "6.4%",
      "title": "postgresql",
      "type": "areaStacked",
    },
  ],
}
`;

exports[`Breakdown when data is loaded returns the transaction breakdown for a transaction group 9`] = `
Array [
  Object {
    "x": 1599717600000,
    "y": 1,
  },
  Object {
    "x": 1599717630000,
    "y": 1,
  },
  Object {
    "x": 1599717660000,
    "y": null,
  },
  Object {
    "x": 1599717690000,
    "y": 1,
  },
  Object {
    "x": 1599717720000,
    "y": null,
  },
  Object {
    "x": 1599717750000,
    "y": 1,
  },
  Object {
    "x": 1599717780000,
    "y": 1,
  },
  Object {
    "x": 1599717810000,
    "y": 1,
  },
  Object {
    "x": 1599717840000,
    "y": null,
  },
  Object {
    "x": 1599717870000,
    "y": null,
  },
  Object {
    "x": 1599717900000,
    "y": 1,
  },
  Object {
    "x": 1599717930000,
    "y": 1,
  },
  Object {
    "x": 1599717960000,
    "y": null,
  },
  Object {
    "x": 1599717990000,
    "y": 1,
  },
  Object {
    "x": 1599718020000,
    "y": null,
  },
  Object {
    "x": 1599718050000,
    "y": 1,
  },
  Object {
    "x": 1599718080000,
    "y": null,
  },
  Object {
    "x": 1599718110000,
    "y": 1,
  },
  Object {
    "x": 1599718140000,
    "y": null,
  },
  Object {
    "x": 1599718170000,
    "y": 1,
  },
  Object {
    "x": 1599718200000,
    "y": null,
  },
  Object {
    "x": 1599718230000,
    "y": 1,
  },
  Object {
    "x": 1599718260000,
    "y": null,
  },
  Object {
    "x": 1599718290000,
    "y": null,
  },
  Object {
    "x": 1599718320000,
    "y": null,
  },
  Object {
    "x": 1599718350000,
    "y": 1,
  },
  Object {
    "x": 1599718380000,
    "y": 1,
  },
  Object {
    "x": 1599718410000,
    "y": null,
  },
  Object {
    "x": 1599718440000,
    "y": null,
  },
  Object {
    "x": 1599718470000,
    "y": 1,
  },
  Object {
    "x": 1599718500000,
    "y": 1,
  },
  Object {
    "x": 1599718530000,
    "y": null,
  },
  Object {
    "x": 1599718560000,
    "y": null,
  },
  Object {
    "x": 1599718590000,
    "y": 1,
  },
  Object {
    "x": 1599718620000,
    "y": null,
  },
  Object {
    "x": 1599718650000,
    "y": 1,
  },
  Object {
    "x": 1599718680000,
    "y": null,
  },
  Object {
    "x": 1599718710000,
    "y": 1,
  },
  Object {
    "x": 1599718740000,
    "y": 1,
  },
  Object {
    "x": 1599718770000,
    "y": 1,
  },
  Object {
    "x": 1599718800000,
    "y": null,
  },
  Object {
    "x": 1599718830000,
    "y": null,
  },
  Object {
    "x": 1599718860000,
    "y": null,
  },
  Object {
    "x": 1599718890000,
    "y": 1,
  },
  Object {
    "x": 1599718920000,
    "y": null,
  },
  Object {
    "x": 1599718950000,
    "y": 1,
  },
  Object {
    "x": 1599718980000,
    "y": null,
  },
  Object {
    "x": 1599719010000,
    "y": null,
  },
  Object {
    "x": 1599719040000,
    "y": 1,
  },
  Object {
    "x": 1599719070000,
    "y": 1,
  },
  Object {
    "x": 1599719100000,
    "y": null,
  },
  Object {
    "x": 1599719130000,
    "y": 1,
  },
  Object {
    "x": 1599719160000,
    "y": null,
  },
  Object {
    "x": 1599719190000,
    "y": 1,
  },
  Object {
    "x": 1599719220000,
    "y": 1,
  },
  Object {
    "x": 1599719250000,
    "y": 1,
  },
  Object {
    "x": 1599719280000,
    "y": null,
  },
  Object {
    "x": 1599719310000,
    "y": 1,
  },
  Object {
    "x": 1599719340000,
    "y": 1,
  },
  Object {
    "x": 1599719370000,
    "y": null,
  },
  Object {
    "x": 1599719400000,
    "y": null,
  },
  Object {
    "x": 1599719430000,
    "y": 1,
  },
  Object {
    "x": 1599719460000,
    "y": 1,
  },
  Object {
    "x": 1599719490000,
    "y": null,
  },
  Object {
    "x": 1599719520000,
    "y": 1,
  },
  Object {
    "x": 1599719550000,
    "y": 1,
  },
  Object {
    "x": 1599719580000,
    "y": null,
  },
  Object {
    "x": 1599719610000,
    "y": null,
  },
  Object {
    "x": 1599719640000,
    "y": null,
  },
  Object {
    "x": 1599719670000,
    "y": 1,
  },
  Object {
    "x": 1599719700000,
    "y": null,
  },
  Object {
    "x": 1599719730000,
    "y": null,
  },
  Object {
    "x": 1599719760000,
    "y": 1,
  },
  Object {
    "x": 1599719790000,
    "y": 1,
  },
  Object {
    "x": 1599719820000,
    "y": null,
  },
  Object {
    "x": 1599719850000,
    "y": 1,
  },
  Object {
    "x": 1599719880000,
    "y": null,
  },
  Object {
    "x": 1599719910000,
    "y": 1,
  },
  Object {
    "x": 1599719940000,
    "y": null,
  },
  Object {
    "x": 1599719970000,
    "y": null,
  },
  Object {
    "x": 1599720000000,
    "y": 1,
  },
  Object {
    "x": 1599720030000,
    "y": 1,
  },
  Object {
    "x": 1599720060000,
    "y": null,
  },
  Object {
    "x": 1599720090000,
    "y": null,
  },
  Object {
    "x": 1599720120000,
    "y": null,
  },
  Object {
    "x": 1599720150000,
    "y": null,
  },
  Object {
    "x": 1599720180000,
    "y": null,
  },
  Object {
    "x": 1599720210000,
    "y": null,
  },
  Object {
    "x": 1599720240000,
    "y": null,
  },
  Object {
    "x": 1599720270000,
    "y": 1,
  },
  Object {
    "x": 1599720300000,
    "y": null,
  },
  Object {
    "x": 1599720330000,
    "y": 1,
  },
  Object {
    "x": 1599720360000,
    "y": null,
  },
  Object {
    "x": 1599720390000,
    "y": null,
  },
  Object {
    "x": 1599720420000,
    "y": 1,
  },
  Object {
    "x": 1599720450000,
    "y": 1,
  },
  Object {
    "x": 1599720480000,
    "y": null,
  },
  Object {
    "x": 1599720510000,
    "y": null,
  },
  Object {
    "x": 1599720540000,
    "y": null,
  },
  Object {
    "x": 1599720570000,
    "y": null,
  },
  Object {
    "x": 1599720600000,
    "y": null,
  },
  Object {
    "x": 1599720630000,
    "y": 1,
  },
  Object {
    "x": 1599720660000,
    "y": null,
  },
  Object {
    "x": 1599720690000,
    "y": null,
  },
  Object {
    "x": 1599720720000,
    "y": null,
  },
  Object {
    "x": 1599720750000,
    "y": 1,
  },
  Object {
    "x": 1599720780000,
    "y": 1,
  },
  Object {
    "x": 1599720810000,
    "y": 1,
  },
  Object {
    "x": 1599720840000,
    "y": null,
  },
  Object {
    "x": 1599720870000,
    "y": null,
  },
  Object {
    "x": 1599720900000,
    "y": 1,
  },
  Object {
    "x": 1599720930000,
    "y": 1,
  },
  Object {
    "x": 1599720960000,
    "y": null,
  },
  Object {
    "x": 1599720990000,
    "y": 1,
  },
  Object {
    "x": 1599721020000,
    "y": null,
  },
  Object {
    "x": 1599721050000,
    "y": null,
  },
  Object {
    "x": 1599721080000,
    "y": null,
  },
  Object {
    "x": 1599721110000,
    "y": 1,
  },
  Object {
    "x": 1599721140000,
    "y": 1,
  },
  Object {
    "x": 1599721170000,
    "y": null,
  },
  Object {
    "x": 1599721200000,
    "y": null,
  },
]
`;
